--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -7,4 +7,33 @@ components:
   properties: {col_widths: '{}'}
   name: column_panel_1
   layout_properties: {slot: default}
-  components: []
+  components:
+  - type: ColumnPanel
+    properties: {col_widths: '{}'}
+    name: column_panel_3
+    layout_properties: {grid_position: 'HLLJYM,ZYQPXV'}
+    components:
+    - type: TextArea
+      properties: {height: 230}
+      name: text_area_1
+      layout_properties: {grid_position: 'DPHPUF,LFTATB'}
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: Old Data (.json file), font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: label_1
+      layout_properties: {grid_position: 'LROSJT,LZRBQI'}
+  - type: ColumnPanel
+    properties: {col_widths: '{}'}
+    name: column_panel_2
+    layout_properties: {grid_position: 'HLLJYM,RYIMHL'}
+    components:
+    - type: TextArea
+      properties: {height: 229}
+      name: text_area_2
+      layout_properties: {grid_position: 'GMGHYH,VKQMQU'}
+    - type: Label
+      properties: {}
+      name: label_2
+      layout_properties: {grid_position: 'JNXCFP,LTHUEV'}
