--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -4,7 +4,9 @@ container:
   properties: {html: '@theme:standard-page.html'}
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: large, spacing_above: small, col_widths: '{}', spacing_below: small,
+    background: ''}
   name: column_panel_1
   layout_properties: {slot: default}
   components:
@@ -14,14 +16,17 @@ components:
     layout_properties: {grid_position: 'HLLJYM,ZYQPXV'}
     components:
     - type: TextArea
-      properties: {height: 230}
-      name: text_area_1
+      properties: {role: null, align: left, height: 230, tooltip: '', placeholder: (locale.json),
+        border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+        auto_expand: false, font: '', spacing_above: small, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false}
+      name: oldData
       layout_properties: {grid_position: 'DPHPUF,LFTATB'}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-        visible: true, text: Old Data (.json file), font_size: null, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+        visible: true, text: Old Data (existing file), font_size: null, font: '',
+        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: ''}
       name: label_1
       layout_properties: {grid_position: 'LROSJT,LZRBQI'}
   - type: ColumnPanel
@@ -30,10 +35,34 @@ components:
     layout_properties: {grid_position: 'HLLJYM,RYIMHL'}
     components:
     - type: TextArea
-      properties: {height: 229}
+      properties: {role: null, align: left, height: 229, tooltip: '', placeholder: (locale.json),
+        border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+        auto_expand: false, font: '', spacing_above: small, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false}
       name: text_area_2
       layout_properties: {grid_position: 'GMGHYH,VKQMQU'}
     - type: Label
-      properties: {}
-      name: label_2
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: Updated Data (received file), font_size: null, font: '',
+        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: ''}
+      name: updatedData
       layout_properties: {grid_position: 'JNXCFP,LTHUEV'}
+  - type: Button
+    properties: {role: filled, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: SUBMIT, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: getData
+    layout_properties: {grid_position: 'JZZUTK,RWFFCU'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: Output .json, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_3
+    layout_properties: {grid_position: 'MYNPEQ,TPIYWH'}
+  - type: TextArea
+    properties: {height: 247}
+    name: outputData
+    layout_properties: {grid_position: 'ETMSGL,JPKZON'}
