--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -39,7 +39,7 @@ components:
         border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
         auto_expand: false, font: '', spacing_above: small, spacing_below: small,
         italic: false, background: '', bold: false, underline: false}
-      name: text_area_2
+      name: newDta
       layout_properties: {grid_position: 'GMGHYH,VKQMQU'}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
@@ -55,6 +55,7 @@ components:
       underline: false, icon: ''}
     name: getData
     layout_properties: {grid_position: 'JZZUTK,RWFFCU'}
+    event_bindings: {click: get}
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: Output .json, font_size: null, font: '', spacing_above: small,
@@ -66,3 +67,10 @@ components:
     properties: {height: 247}
     name: outputData
     layout_properties: {grid_position: 'ETMSGL,JPKZON'}
+  - type: Button
+    properties: {role: filled, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: Download, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: 'fa:download'}
+    name: button_1
+    layout_properties: {grid_position: 'XDFUET,RBKNWT'}
