--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -15,6 +15,13 @@ components:
     name: column_panel_3
     layout_properties: {grid_position: 'HLLJYM,ZYQPXV'}
     components:
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: Old Data (existing file), font_size: null, font: '',
+        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: ''}
+      name: label_1
+      layout_properties: {grid_position: 'ICKYTC,JNHMRT'}
     - type: TextArea
       properties: {role: null, align: left, height: 230, tooltip: '', placeholder: (locale.json),
         border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
@@ -22,18 +29,18 @@ components:
         italic: false, background: '', bold: false, underline: false}
       name: oldData
       layout_properties: {grid_position: 'DPHPUF,LFTATB'}
-    - type: Label
-      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-        visible: true, text: Old Data (existing file), font_size: null, font: '',
-        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
-      name: label_1
-      layout_properties: {grid_position: 'LROSJT,LZRBQI'}
   - type: ColumnPanel
     properties: {col_widths: '{}'}
     name: column_panel_2
     layout_properties: {grid_position: 'HLLJYM,RYIMHL'}
     components:
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: Updated Data (received file), font_size: null, font: '',
+        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: ''}
+      name: updatedData
+      layout_properties: {grid_position: 'HEUVDI,EZANMN'}
     - type: TextArea
       properties: {role: null, align: left, height: 229, tooltip: '', placeholder: (locale.json),
         border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
@@ -41,17 +48,10 @@ components:
         italic: false, background: '', bold: false, underline: false}
       name: newData
       layout_properties: {grid_position: 'GMGHYH,VKQMQU'}
-    - type: Label
-      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-        visible: true, text: Updated Data (received file), font_size: null, font: '',
-        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
-      name: updatedData
-      layout_properties: {grid_position: 'JNXCFP,LTHUEV'}
   - type: Button
     properties: {role: filled, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: SUBMIT, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      foreground: '', visible: true, text: SUBMIT, font_size: null, font: '', spacing_above: medium,
+      icon_align: left, spacing_below: medium, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: submit
     layout_properties: {grid_position: 'JZZUTK,RWFFCU'}
