--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -23,10 +23,10 @@ components:
       name: label_1
       layout_properties: {grid_position: 'ICKYTC,JNHMRT'}
     - type: TextArea
-      properties: {role: null, align: left, height: 230, tooltip: '', placeholder: (locale.json),
-        border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-        auto_expand: false, font: '', spacing_above: small, spacing_below: small,
-        italic: false, background: '', bold: false, underline: false}
+      properties: {role: null, align: left, height: 230, tooltip: Enter existing .json,
+        placeholder: (locale.json), border: '', enabled: true, foreground: '', visible: true,
+        text: '', font_size: null, auto_expand: false, font: '', spacing_above: small,
+        spacing_below: small, italic: false, background: '', bold: true, underline: false}
       name: oldData
       layout_properties: {grid_position: 'DPHPUF,LFTATB'}
   - type: ColumnPanel
@@ -42,10 +42,10 @@ components:
       name: updatedData
       layout_properties: {grid_position: 'HEUVDI,EZANMN'}
     - type: TextArea
-      properties: {role: null, align: left, height: 229, tooltip: '', placeholder: (locale.json),
-        border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-        auto_expand: false, font: '', spacing_above: small, spacing_below: small,
-        italic: false, background: '', bold: false, underline: false}
+      properties: {role: null, align: left, height: 229, tooltip: Enter received .json,
+        placeholder: (locale.json), border: '', enabled: true, foreground: '', visible: true,
+        text: '', font_size: null, auto_expand: false, font: '', spacing_above: small,
+        spacing_below: small, italic: false, background: '', bold: true, underline: false}
       name: newData
       layout_properties: {grid_position: 'GMGHYH,VKQMQU'}
   - type: Button
