--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -64,7 +64,10 @@ components:
     name: label_3
     layout_properties: {grid_position: 'MYNPEQ,TPIYWH'}
   - type: TextArea
-    properties: {height: 247}
+    properties: {role: null, align: left, height: 247, tooltip: '', placeholder: '',
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+      auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
+      background: '', bold: true, underline: false}
     name: outputData
     layout_properties: {grid_position: 'ETMSGL,JPKZON'}
   - type: Button
