--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -24,8 +24,8 @@ components:
       layout_properties: {grid_position: 'ICKYTC,JNHMRT'}
     - type: TextArea
       properties: {role: null, align: left, height: 230, tooltip: Enter existing .json,
-        placeholder: (locale.json), border: '', enabled: true, foreground: '', visible: true,
-        text: '', font_size: null, auto_expand: false, font: '', spacing_above: small,
+        placeholder: enter .json here, border: '', enabled: true, foreground: '',
+        visible: true, text: '', font_size: null, auto_expand: false, font: '', spacing_above: small,
         spacing_below: small, italic: false, background: '', bold: true, underline: false}
       name: oldData
       layout_properties: {grid_position: 'DPHPUF,LFTATB'}
@@ -43,8 +43,8 @@ components:
       layout_properties: {grid_position: 'HEUVDI,EZANMN'}
     - type: TextArea
       properties: {role: null, align: left, height: 229, tooltip: Enter received .json,
-        placeholder: (locale.json), border: '', enabled: true, foreground: '', visible: true,
-        text: '', font_size: null, auto_expand: false, font: '', spacing_above: small,
+        placeholder: enter .json here, border: '', enabled: true, foreground: '',
+        visible: true, text: '', font_size: null, auto_expand: false, font: '', spacing_above: small,
         spacing_below: small, italic: false, background: '', bold: true, underline: false}
       name: newData
       layout_properties: {grid_position: 'GMGHYH,VKQMQU'}
@@ -65,7 +65,7 @@ components:
     layout_properties: {grid_position: 'MYNPEQ,TPIYWH'}
   - type: TextArea
     properties: {role: null, align: left, height: 247, tooltip: '', placeholder: '',
-      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+      border: '', enabled: false, foreground: '', visible: true, text: '', font_size: null,
       auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
       background: '', bold: true, underline: false}
     name: outputData
