--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -51,7 +51,7 @@ components:
   - type: Button
     properties: {role: filled, align: center, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: SUBMIT, font_size: null, font: '', spacing_above: medium,
-      icon_align: left, spacing_below: medium, italic: false, background: '', bold: false,
+      icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: submit
     layout_properties: {grid_position: 'JZZUTK,RWFFCU'}
