--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -64,14 +64,14 @@ components:
     name: label_3
     layout_properties: {grid_position: 'MYNPEQ,TPIYWH', full_width_row: false}
   - type: TextArea
-    properties: {role: null, align: left, height: 247, tooltip: '', placeholder: '',
+    properties: {role: null, align: left, height: 247, tooltip: '', placeholder: output will be displayed here,
       border: '', enabled: false, foreground: '', visible: true, text: '', font_size: null,
       auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
       background: '', bold: true, underline: false}
     name: outputData
     layout_properties: {grid_position: 'ETMSGL,JPKZON'}
   - type: TextBox
-    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: output filename,
+    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: output file name,
       border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
       font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
       background: '', bold: false, underline: false}
