--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -5,8 +5,8 @@ container:
 components:
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: large, spacing_above: small, col_widths: '{}', spacing_below: small,
-    background: ''}
+    wrap_on: mobile, col_spacing: large, spacing_above: small, col_widths: '{"JPKZON":35,"JAMGWB":25,"TPIYWH":20,"QFAIBG":15,"OHOQKP":25}',
+    spacing_below: small, background: ''}
   name: column_panel_1
   layout_properties: {slot: default}
   components:
@@ -63,6 +63,17 @@ components:
       underline: false, icon: ''}
     name: label_3
     layout_properties: {grid_position: 'MYNPEQ,TPIYWH', full_width_row: false}
+  - type: Spacer
+    properties: {height: 35}
+    name: spacer_3
+    layout_properties: {grid_position: 'MYNPEQ,QFAIBG', full_width_row: false}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: Logs, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_4
+    layout_properties: {grid_position: 'MYNPEQ,OHOQKP', full_width_row: false}
   - type: TextArea
     properties: {role: null, align: left, height: 247, tooltip: '', placeholder: output will be displayed here,
       border: '', enabled: false, foreground: '', visible: true, text: '', font_size: null,
@@ -70,6 +81,13 @@ components:
       background: '', bold: true, underline: false}
     name: outputData
     layout_properties: {grid_position: 'ETMSGL,JPKZON'}
+  - type: TextArea
+    properties: {role: null, align: left, height: 246, tooltip: '', placeholder: updates will be displayed here,
+      border: '', enabled: false, foreground: '', visible: true, text: '', font_size: null,
+      auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
+      background: 'theme:On Tertiary Container', bold: false, underline: false}
+    name: logs
+    layout_properties: {grid_position: 'ETMSGL,JAMGWB'}
   - type: TextBox
     properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: output file name,
       border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
