--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -83,9 +83,9 @@ components:
     layout_properties: {grid_position: 'ETMSGL,JPKZON'}
   - type: TextArea
     properties: {role: null, align: left, height: 246, tooltip: '', placeholder: updates will be displayed here,
-      border: '', enabled: false, foreground: '', visible: true, text: '', font_size: null,
-      auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
-      background: 'theme:On Tertiary Container', bold: false, underline: false}
+      border: '', enabled: false, foreground: 'theme:On Primary', visible: true, text: '',
+      font_size: null, auto_expand: false, font: '', spacing_above: small, spacing_below: small,
+      italic: false, background: 'theme:On Tertiary Container', bold: true, underline: false}
     name: logs
     layout_properties: {grid_position: 'ETMSGL,JAMGWB'}
   - type: TextBox
