--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -118,3 +118,7 @@ components:
     properties: {height: 32}
     name: spacer_1
     layout_properties: {grid_position: 'XDFUET,UMDIHX', full_width_row: false}
+  - type: Spacer
+    properties: {height: 32}
+    name: spacer_4
+    layout_properties: {grid_position: 'QVYPSS,TZATOI'}
