--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -5,44 +5,58 @@ container:
 components:
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: large, spacing_above: small, col_widths: '{"JPKZON":35,"JAMGWB":25,"TPIYWH":20,"QFAIBG":15,"OHOQKP":25}',
+    wrap_on: mobile, col_spacing: large, spacing_above: small, col_widths: '{"JPKZON":35,"JAMGWB":25,"TPIYWH":20,"QFAIBG":15,"OHOQKP":25,"ZYQPXV":35,"RYIMHL":35}',
     spacing_below: small, background: ''}
   name: column_panel_1
   layout_properties: {slot: default}
   components:
   - type: ColumnPanel
-    properties: {col_widths: '{}'}
+    properties: {col_widths: '{"JNHMRT":25,"JXZWXC":35}'}
     name: column_panel_3
     layout_properties: {grid_position: 'HLLJYM,ZYQPXV'}
     components:
     - type: Label
-      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-        visible: true, text: Old Data (existing file), font_size: null, font: '',
-        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
+      properties: {role: null, align: left, tooltip: Enter the existing untranslated / partially translated .json under Old Data,
+        border: '', foreground: '', visible: true, text: Old Data (existing file),
+        font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false, icon: ''}
       name: label_1
-      layout_properties: {grid_position: 'ICKYTC,JNHMRT'}
+      layout_properties: {grid_position: 'ICKYTC,JNHMRT', full_width_row: false}
+    - type: Button
+      properties: {role: null, align: right, tooltip: Enter the existing untranslated / partially translated .json under Old Data,
+        border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 18,
+        font: '', spacing_above: small, icon_align: right_edge, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false, icon: 'fa:info-circle'}
+      name: button_1
+      layout_properties: {grid_position: 'ICKYTC,JXZWXC', full_width_row: false}
     - type: TextArea
-      properties: {role: null, align: left, height: 230, tooltip: Enter existing .json,
+      properties: {role: null, align: left, height: 230, tooltip: Enter the existing untranslated / partially translated .json here,
         placeholder: enter .json here, border: '', enabled: true, foreground: '',
         visible: true, text: '', font_size: null, auto_expand: false, font: '', spacing_above: small,
         spacing_below: small, italic: false, background: '', bold: true, underline: false}
       name: oldData
-      layout_properties: {grid_position: 'DPHPUF,LFTATB'}
+      layout_properties: {grid_position: 'DPHPUF,OHNXOI'}
   - type: ColumnPanel
-    properties: {col_widths: '{}'}
+    properties: {col_widths: '{"EZANMN":35,"OFMNJU":25}'}
     name: column_panel_2
     layout_properties: {grid_position: 'HLLJYM,RYIMHL'}
     components:
     - type: Label
-      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-        visible: true, text: Updated Data (received file), font_size: null, font: '',
-        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
+      properties: {role: null, align: left, tooltip: Enter the received translated .json under Updated Data,
+        border: '', foreground: '', visible: true, text: Updated Data (received file),
+        font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false, icon: ''}
       name: updatedData
       layout_properties: {grid_position: 'HEUVDI,EZANMN'}
+    - type: Button
+      properties: {role: null, align: right, tooltip: Enter the received translated .json under Updated Data,
+        border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 18,
+        font: '', spacing_above: small, icon_align: right_edge, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false, icon: 'fa:info-circle'}
+      name: button_2
+      layout_properties: {grid_position: 'HEUVDI,OFMNJU'}
     - type: TextArea
-      properties: {role: null, align: left, height: 229, tooltip: Enter received .json,
+      properties: {role: null, align: left, height: 229, tooltip: Enter the received translated .json here,
         placeholder: enter .json here, border: '', enabled: true, foreground: '',
         visible: true, text: '', font_size: null, auto_expand: false, font: '', spacing_above: small,
         spacing_below: small, italic: false, background: '', bold: true, underline: false}
@@ -82,7 +96,7 @@ components:
     name: outputData
     layout_properties: {grid_position: 'ETMSGL,JPKZON'}
   - type: TextArea
-    properties: {role: null, align: left, height: 246, tooltip: '', placeholder: updates will be displayed here,
+    properties: {role: null, align: left, height: 246, tooltip: '', placeholder: updates will be displayed here (discarded / newly added keys). Existing data will remain the same,
       border: '', enabled: false, foreground: 'theme:On Primary', visible: true, text: '',
       font_size: null, auto_expand: false, font: '', spacing_above: small, spacing_below: small,
       italic: false, background: 'theme:On Tertiary Container', bold: true, underline: false}
