--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -5,7 +5,7 @@ container:
 components:
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: large, spacing_above: small, col_widths: '{"JPKZON":35,"JAMGWB":25,"TPIYWH":20,"QFAIBG":15,"OHOQKP":25,"ZYQPXV":35,"RYIMHL":35}',
+    wrap_on: mobile, col_spacing: large, spacing_above: small, col_widths: '{"JPKZON":35,"JAMGWB":25,"TPIYWH":10,"ZYQPXV":35,"RYIMHL":35,"QWGHHI":35,"IXMYMG":15,"MZAXQK":15}',
     spacing_below: small, background: ''}
   name: column_panel_1
   layout_properties: {slot: default}
@@ -64,30 +64,40 @@ components:
       layout_properties: {grid_position: 'GMGHYH,VKQMQU'}
   - type: Button
     properties: {role: filled, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: SUBMIT, font_size: null, font: '', spacing_above: medium,
-      icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
+      foreground: '', visible: true, text: SUBMIT, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: medium, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: submit
     layout_properties: {grid_position: 'JZZUTK,RWFFCU'}
     event_bindings: {click: getData}
   - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Output, font_size: null, font: '', spacing_above: small,
+    properties: {role: null, align: left, tooltip: View your output .json here, border: '',
+      foreground: '', visible: true, text: Output, font_size: null, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: label_3
     layout_properties: {grid_position: 'MYNPEQ,TPIYWH', full_width_row: false}
-  - type: Spacer
-    properties: {height: 35}
-    name: spacer_3
-    layout_properties: {grid_position: 'MYNPEQ,QFAIBG', full_width_row: false}
+  - type: Button
+    properties: {role: null, align: right, tooltip: View your output .json here, border: '',
+      enabled: true, foreground: '', visible: true, text: '', font_size: 18, font: '',
+      spacing_above: small, icon_align: right_edge, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false, icon: 'fa:info-circle'}
+    name: button_3
+    layout_properties: {grid_position: 'MYNPEQ,QWGHHI', full_width_row: false}
   - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Logs, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
+    properties: {role: null, align: left, tooltip: Updates (discarded / newly added keys). Existing data will remain the same,
+      border: '', foreground: '', visible: true, text: Logs, font_size: null, font: '',
+      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false, icon: ''}
     name: label_4
-    layout_properties: {grid_position: 'MYNPEQ,OHOQKP', full_width_row: false}
+    layout_properties: {grid_position: 'MYNPEQ,IXMYMG', full_width_row: false}
+  - type: Button
+    properties: {role: null, align: right, tooltip: Updates (discarded / newly added keys). Existing data will remain the same,
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 18,
+      font: '', spacing_above: small, icon_align: right_edge, spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:info-circle'}
+    name: button_4
+    layout_properties: {grid_position: 'MYNPEQ,MZAXQK', full_width_row: false}
   - type: TextArea
     properties: {role: null, align: left, height: 247, tooltip: '', placeholder: output will be displayed here,
       border: '', enabled: false, foreground: '', visible: true, text: '', font_size: null,
@@ -96,7 +106,7 @@ components:
     name: outputData
     layout_properties: {grid_position: 'ETMSGL,JPKZON'}
   - type: TextArea
-    properties: {role: null, align: left, height: 246, tooltip: '', placeholder: updates will be displayed here (discarded / newly added keys). Existing data will remain the same,
+    properties: {role: null, align: left, height: 246, tooltip: '', placeholder: logs are displayed here,
       border: '', enabled: false, foreground: 'theme:On Primary', visible: true, text: '',
       font_size: null, auto_expand: false, font: '', spacing_above: small, spacing_below: small,
       italic: false, background: 'theme:On Tertiary Container', bold: true, underline: false}
