Created Form2; Edited standard-page.html and Form1; Deleted Form1.Form1_copy and Form1.Form1_copy.ItemTemplate1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,8 +1,7 @@
 unique_ids:
   forms:
     Form1: H7POIOBGD7IIIYKAAUKWUJMOIDZW7KQH
-    Form1.Form1_copy: '1694179749777422389068206.1013'
-    Form1.Form1_copy.ItemTemplate1: '1694179790011317378203166.84796'
+    Form2: '1694180627845197393593847.2935'
   modules: {}
   server_modules: {}
   assets:
