--- a/client_code/Form2/form_template.yaml
+++ b/client_code/Form2/form_template.yaml
@@ -10,6 +10,20 @@ components:
   layout_properties: {slot: default}
   name: column_panel_1
   components:
+  - type: Button
+    properties: {role: null, align: right, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: SWITCH TO FILE MODE, font_size: 10, font: '',
+      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false, icon: ''}
+    name: button_6
+    layout_properties: {grid_position: 'ZSTGLY,AKCHGO'}
+  - type: Label
+    properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+      visible: true, text: DIRECTORY MODE, font_size: 18, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+      underline: false, icon: ''}
+    name: label_5
+    layout_properties: {grid_position: 'YEANIL,AKSVTX'}
   - type: ColumnPanel
     properties: {col_widths: '{"JNHMRT":25,"JXZWXC":35}'}
     layout_properties: {grid_position: 'HLLJYM,ZYQPXV'}
@@ -17,10 +31,9 @@ components:
     components:
     - type: Label
       properties: {role: null, align: left, tooltip: Untranslated/partially translated .json,
-        border: '', foreground: '', visible: true, text: "Old Data \n(existing files\
-          \ directory)", font_size: null, font: '', spacing_above: small, icon_align: left,
-        spacing_below: small, italic: false, background: '', bold: false, underline: false,
-        icon: ''}
+        border: '', foreground: '', visible: true, text: Old Data (existing file),
+        font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false, icon: ''}
       layout_properties: {grid_position: 'ICKYTC,JNHMRT', full_width_row: false}
       name: label_1
     - type: Button
@@ -37,9 +50,9 @@ components:
     components:
     - type: Label
       properties: {role: null, align: left, tooltip: Received/translated .json, border: '',
-        foreground: '', visible: true, text: "Updated Data \n(received files directory)",
-        font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
-        italic: false, background: '', bold: false, underline: false, icon: ''}
+        foreground: '', visible: true, text: Updated Data (received file), font_size: null,
+        font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: ''}
       layout_properties: {grid_position: 'HEUVDI,EZANMN'}
       name: updatedData
     - type: Button
@@ -52,11 +65,11 @@ components:
   - type: FileLoader
     properties: {}
     name: file_loader_1
-    layout_properties: {grid_position: 'LZZTQG,BMNVKD'}
+    layout_properties: {grid_position: 'QNIFFC,HHVWWK'}
   - type: FileLoader
     properties: {}
     name: file_loader_2
-    layout_properties: {grid_position: 'LZZTQG,QLFYAC'}
+    layout_properties: {grid_position: 'QNIFFC,PZKNQF'}
   - type: Button
     properties: {role: filled, align: center, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: SUBMIT, font_size: null, font: '', spacing_above: small,
@@ -142,3 +155,7 @@ components:
     properties: {height: 32}
     layout_properties: {grid_position: 'QVYPSS,TZATOI'}
     name: spacer_4
+- type: ColumnPanel
+  properties: {}
+  name: column_panel_4
+  layout_properties: {slot: left-nav}
