Created Form3; Deleted Form2_copy

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -2,7 +2,7 @@ unique_ids:
   forms:
     Form1: H7POIOBGD7IIIYKAAUKWUJMOIDZW7KQH
     Form2: '1694180627845197393593847.2935'
-    Form2_copy: '1694260395182482010149132.8659'
+    Form3: '1694260395182482010149132.8659'
   modules: {}
   server_modules: {}
   assets:
