updated live translate feature

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,10 +1,13 @@
 unique_ids:
   forms:
     Form1: H7POIOBGD7IIIYKAAUKWUJMOIDZW7KQH
+    Form1.Form3: '1694260395182482010149132.8659'
+    Form1.Form3_copy: '1694267150384165349412830.40472'
     Form2: '1694180627845197393593847.2935'
-    Form3: '1694260395182482010149132.8659'
+    Form4: '1694267060065130735473898.92592'
   modules: {}
-  server_modules: {}
+  server_modules:
+    ServerModule1: '1694267903684836494018966.2047'
   assets:
     standard-page.html: B7PW6CIRF52E475G2JMQYE4724ZCJ6SI
     theme.css: XX4JF237R7YPIE2JHO3PZZ5DPXXAY4XF
