--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -21,7 +21,7 @@ components:
       background: '', bold: false, underline: false, icon: ''}
     name: button_5
     layout_properties: {grid_position: 'LWKEST,EOWJNK'}
-    event_bindings: {click: button_5_click}
+    event_bindings: {click: goToForm4}
   - type: Button
     properties: {role: null, align: right, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: SWITCH TO DIRECTORY MODE, font_size: 10,
