--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -6,5 +6,7 @@ unique_ids:
   modules: {}
   server_modules: {}
   assets:
+    SS1.png: 22LVYFGNJAGA7CZVUH7LKWAYZ6747UF2
+    SS3.jpg: S2ZWPWJFGMWPF6N4FKBD4TO4NA7VTRWY
     standard-page.html: B7PW6CIRF52E475G2JMQYE4724ZCJ6SI
     theme.css: XX4JF237R7YPIE2JHO3PZZ5DPXXAY4XF
