Created PropertiesUpload; Deleted Form2_copy

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,8 +1,8 @@
 unique_ids:
   forms:
-    Form2_copy: '1694588236165796811270580.2539'
     Form1: H7POIOBGD7IIIYKAAUKWUJMOIDZW7KQH
     Form2: '1694180627845197393593847.2935'
+    PropertiesUpload: '1694588236165796811270580.2539'
     Form4: '1694267060065130735473898.92592'
   modules: {}
   server_modules: {}
